# claim-rewards

./: .pre-commit-config.yaml  Makefile  README.md  accounts.yaml  generate_versions.py  pyproject.toml
src/claim_rewards/: config.py  hive_client.py  logging_setup.py  main.py  scot.py  scot_client.py
standalone/: claim-rewards.py
